antlr/UpdateGrammarParser.cpp

// Generated from UpdateGrammar.g4 by ANTLR 4.13.2


#include "UpdateGrammarListener.h"
#include "UpdateGrammarVisitor.h"

#include "UpdateGrammarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct UpdateGrammarParserStaticData final {
  UpdateGrammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  UpdateGrammarParserStaticData(const UpdateGrammarParserStaticData&) = delete;
  UpdateGrammarParserStaticData(UpdateGrammarParserStaticData&&) = delete;
  UpdateGrammarParserStaticData& operator=(const UpdateGrammarParserStaticData&) = delete;
  UpdateGrammarParserStaticData& operator=(UpdateGrammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag updategrammarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<UpdateGrammarParserStaticData> updategrammarParserStaticData = nullptr;

void updategrammarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (updategrammarParserStaticData != nullptr) {
    return;
  }
#else
  assert(updategrammarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<UpdateGrammarParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "expression", "variableDeclaration", "constDeclaration", 
      "assignment", "compOperator", "println", "returnStatement", "blockStatement", 
      "functionCall", "functionDefinition", "ifStatement", "elseStatement", 
      "whileStatement"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'var'", "'='", "'const'", "'println'", "'return'", 
      "'{'", "'}'", "','", "'fun'", "'if'", "'else'", "'while'", "", "", 
      "", "", "", "'*'", "'/'", "'+'", "'-'", "'||'", "'&&'", "'=='", "'!='", 
      "'>'", "'>='", "'<'", "'<='"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "IDENTIFIER", 
      "NUMBER", "DOUBLE_NUMBER", "STRING_LITERAL", "BOOL", "ASTERISK", "SLASH", 
      "PLUS", "MINUS", "LOGICAL_OR", "LOGICAL_AND", "EQUAL", "NOT_EQUAL", 
      "GREATER", "GREATER_OR_EQUAL", "LESS", "LESS_OR_EQUAL", "SPACE", "NEW_LINE", 
      "LINE_COMMENT", "MULTI_LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  updategrammarParserStaticData = std::move(staticData);
}

}

UpdateGrammarParser::UpdateGrammarParser(TokenStream *input) : UpdateGrammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

UpdateGrammarParser::UpdateGrammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  UpdateGrammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *updategrammarParserStaticData->atn, updategrammarParserStaticData->decisionToDFA, updategrammarParserStaticData->sharedContextCache, options);
}

UpdateGrammarParser::~UpdateGrammarParser() {
  delete _interpreter;
}

const atn::ATN& UpdateGrammarParser::getATN() const {
  return *updategrammarParserStaticData->atn;
}

std::string UpdateGrammarParser::getGrammarFileName() const {
  return "UpdateGrammar.g4";
}

const std::vector<std::string>& UpdateGrammarParser::getRuleNames() const {
  return updategrammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& UpdateGrammarParser::getVocabulary() const {
  return updategrammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView UpdateGrammarParser::getSerializedATN() const {
  return updategrammarParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

UpdateGrammarParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UpdateGrammarParser::ProgramContext::EOF() {
  return getToken(UpdateGrammarParser::EOF, 0);
}

std::vector<UpdateGrammarParser::StatementContext *> UpdateGrammarParser::ProgramContext::statement() {
  return getRuleContexts<UpdateGrammarParser::StatementContext>();
}

UpdateGrammarParser::StatementContext* UpdateGrammarParser::ProgramContext::statement(size_t i) {
  return getRuleContext<UpdateGrammarParser::StatementContext>(i);
}


size_t UpdateGrammarParser::ProgramContext::getRuleIndex() const {
  return UpdateGrammarParser::RuleProgram;
}

void UpdateGrammarParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void UpdateGrammarParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any UpdateGrammarParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

UpdateGrammarParser::ProgramContext* UpdateGrammarParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, UpdateGrammarParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 55784) != 0)) {
      setState(30);
      statement();
      setState(35);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(36);
    match(UpdateGrammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

UpdateGrammarParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

UpdateGrammarParser::VariableDeclarationContext* UpdateGrammarParser::StatementContext::variableDeclaration() {
  return getRuleContext<UpdateGrammarParser::VariableDeclarationContext>(0);
}

UpdateGrammarParser::ConstDeclarationContext* UpdateGrammarParser::StatementContext::constDeclaration() {
  return getRuleContext<UpdateGrammarParser::ConstDeclarationContext>(0);
}

UpdateGrammarParser::AssignmentContext* UpdateGrammarParser::StatementContext::assignment() {
  return getRuleContext<UpdateGrammarParser::AssignmentContext>(0);
}

UpdateGrammarParser::FunctionDefinitionContext* UpdateGrammarParser::StatementContext::functionDefinition() {
  return getRuleContext<UpdateGrammarParser::FunctionDefinitionContext>(0);
}

UpdateGrammarParser::FunctionCallContext* UpdateGrammarParser::StatementContext::functionCall() {
  return getRuleContext<UpdateGrammarParser::FunctionCallContext>(0);
}

UpdateGrammarParser::PrintlnContext* UpdateGrammarParser::StatementContext::println() {
  return getRuleContext<UpdateGrammarParser::PrintlnContext>(0);
}

UpdateGrammarParser::ReturnStatementContext* UpdateGrammarParser::StatementContext::returnStatement() {
  return getRuleContext<UpdateGrammarParser::ReturnStatementContext>(0);
}

UpdateGrammarParser::IfStatementContext* UpdateGrammarParser::StatementContext::ifStatement() {
  return getRuleContext<UpdateGrammarParser::IfStatementContext>(0);
}

UpdateGrammarParser::BlockStatementContext* UpdateGrammarParser::StatementContext::blockStatement() {
  return getRuleContext<UpdateGrammarParser::BlockStatementContext>(0);
}

UpdateGrammarParser::WhileStatementContext* UpdateGrammarParser::StatementContext::whileStatement() {
  return getRuleContext<UpdateGrammarParser::WhileStatementContext>(0);
}


UpdateGrammarParser::StatementContext::StatementContext(antlr4::ParserRuleContext* parent, size_t invokingState)
{
}

size_t UpdateGrammarParser::StatementContext::getRuleIndex() const {
  return UpdateGrammarParser::RuleStatement;
}

void UpdateGrammarParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void UpdateGrammarParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any UpdateGrammarParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

UpdateGrammarParser::StatementContext* UpdateGrammarParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, UpdateGrammarParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(48);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(38);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(39);
      constDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(40);
      assignment();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(41);
      functionDefinition();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(42);
      functionCall();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(43);
      println();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(44);
      returnStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(45);
      ifStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(46);
      blockStatement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(47);
      whileStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

UpdateGrammarParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t UpdateGrammarParser::ExpressionContext::getRuleIndex() const {
  return UpdateGrammarParser::RuleExpression;
}

void UpdateGrammarParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DoubleExprContext ------------------------------------------------------------------

tree::TerminalNode* UpdateGrammarParser::DoubleExprContext::DOUBLE_NUMBER() {
  return getToken(UpdateGrammarParser::DOUBLE_NUMBER, 0);
}

UpdateGrammarParser::DoubleExprContext::DoubleExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void UpdateGrammarParser::DoubleExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDoubleExpr(this);
}
void UpdateGrammarParser::DoubleExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDoubleExpr(this);
}

std::any UpdateGrammarParser::DoubleExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitDoubleExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StringExprContext ------------------------------------------------------------------

tree::TerminalNode* UpdateGrammarParser::StringExprContext::STRING_LITERAL() {
  return getToken(UpdateGrammarParser::STRING_LITERAL, 0);
}

UpdateGrammarParser::StringExprContext::StringExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void UpdateGrammarParser::StringExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStringExpr(this);
}
void UpdateGrammarParser::StringExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStringExpr(this);
}

std::any UpdateGrammarParser::StringExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitStringExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BoolExprContext ------------------------------------------------------------------

tree::TerminalNode* UpdateGrammarParser::BoolExprContext::BOOL() {
  return getToken(UpdateGrammarParser::BOOL, 0);
}

UpdateGrammarParser::BoolExprContext::BoolExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void UpdateGrammarParser::BoolExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBoolExpr(this);
}
void UpdateGrammarParser::BoolExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBoolExpr(this);
}

std::any UpdateGrammarParser::BoolExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitBoolExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenthesisExprContext ------------------------------------------------------------------

UpdateGrammarParser::ExpressionContext* UpdateGrammarParser::ParenthesisExprContext::expression() {
  return getRuleContext<UpdateGrammarParser::ExpressionContext>(0);
}

UpdateGrammarParser::ParenthesisExprContext::ParenthesisExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void UpdateGrammarParser::ParenthesisExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParenthesisExpr(this);
}
void UpdateGrammarParser::ParenthesisExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParenthesisExpr(this);
}

std::any UpdateGrammarParser::ParenthesisExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitParenthesisExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulDivExprContext ------------------------------------------------------------------

std::vector<UpdateGrammarParser::ExpressionContext *> UpdateGrammarParser::MulDivExprContext::expression() {
  return getRuleContexts<UpdateGrammarParser::ExpressionContext>();
}

UpdateGrammarParser::ExpressionContext* UpdateGrammarParser::MulDivExprContext::expression(size_t i) {
  return getRuleContext<UpdateGrammarParser::ExpressionContext>(i);
}

tree::TerminalNode* UpdateGrammarParser::MulDivExprContext::ASTERISK() {
  return getToken(UpdateGrammarParser::ASTERISK, 0);
}

tree::TerminalNode* UpdateGrammarParser::MulDivExprContext::SLASH() {
  return getToken(UpdateGrammarParser::SLASH, 0);
}

UpdateGrammarParser::MulDivExprContext::MulDivExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void UpdateGrammarParser::MulDivExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMulDivExpr(this);
}
void UpdateGrammarParser::MulDivExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMulDivExpr(this);
}

std::any UpdateGrammarParser::MulDivExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitMulDivExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdExprContext ------------------------------------------------------------------

tree::TerminalNode* UpdateGrammarParser::IdExprContext::IDENTIFIER() {
  return getToken(UpdateGrammarParser::IDENTIFIER, 0);
}

UpdateGrammarParser::IdExprContext::IdExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void UpdateGrammarParser::IdExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdExpr(this);
}
void UpdateGrammarParser::IdExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdExpr(this);
}

std::any UpdateGrammarParser::IdExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitIdExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumExprContext ------------------------------------------------------------------

tree::TerminalNode* UpdateGrammarParser::NumExprContext::NUMBER() {
  return getToken(UpdateGrammarParser::NUMBER, 0);
}

UpdateGrammarParser::NumExprContext::NumExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void UpdateGrammarParser::NumExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNumExpr(this);
}
void UpdateGrammarParser::NumExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNumExpr(this);
}

std::any UpdateGrammarParser::NumExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitNumExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LogicExprContext ------------------------------------------------------------------

std::vector<UpdateGrammarParser::ExpressionContext *> UpdateGrammarParser::LogicExprContext::expression() {
  return getRuleContexts<UpdateGrammarParser::ExpressionContext>();
}

UpdateGrammarParser::ExpressionContext* UpdateGrammarParser::LogicExprContext::expression(size_t i) {
  return getRuleContext<UpdateGrammarParser::ExpressionContext>(i);
}

tree::TerminalNode* UpdateGrammarParser::LogicExprContext::LOGICAL_OR() {
  return getToken(UpdateGrammarParser::LOGICAL_OR, 0);
}

tree::TerminalNode* UpdateGrammarParser::LogicExprContext::LOGICAL_AND() {
  return getToken(UpdateGrammarParser::LOGICAL_AND, 0);
}

UpdateGrammarParser::LogicExprContext::LogicExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void UpdateGrammarParser::LogicExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogicExpr(this);
}
void UpdateGrammarParser::LogicExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogicExpr(this);
}

std::any UpdateGrammarParser::LogicExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitLogicExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PlusMinusExprContext ------------------------------------------------------------------

std::vector<UpdateGrammarParser::ExpressionContext *> UpdateGrammarParser::PlusMinusExprContext::expression() {
  return getRuleContexts<UpdateGrammarParser::ExpressionContext>();
}

UpdateGrammarParser::ExpressionContext* UpdateGrammarParser::PlusMinusExprContext::expression(size_t i) {
  return getRuleContext<UpdateGrammarParser::ExpressionContext>(i);
}

tree::TerminalNode* UpdateGrammarParser::PlusMinusExprContext::PLUS() {
  return getToken(UpdateGrammarParser::PLUS, 0);
}

tree::TerminalNode* UpdateGrammarParser::PlusMinusExprContext::MINUS() {
  return getToken(UpdateGrammarParser::MINUS, 0);
}

UpdateGrammarParser::PlusMinusExprContext::PlusMinusExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void UpdateGrammarParser::PlusMinusExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPlusMinusExpr(this);
}
void UpdateGrammarParser::PlusMinusExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPlusMinusExpr(this);
}

std::any UpdateGrammarParser::PlusMinusExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitPlusMinusExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CompExprContext ------------------------------------------------------------------

std::vector<UpdateGrammarParser::ExpressionContext *> UpdateGrammarParser::CompExprContext::expression() {
  return getRuleContexts<UpdateGrammarParser::ExpressionContext>();
}

UpdateGrammarParser::ExpressionContext* UpdateGrammarParser::CompExprContext::expression(size_t i) {
  return getRuleContext<UpdateGrammarParser::ExpressionContext>(i);
}

UpdateGrammarParser::CompOperatorContext* UpdateGrammarParser::CompExprContext::compOperator() {
  return getRuleContext<UpdateGrammarParser::CompOperatorContext>(0);
}

UpdateGrammarParser::CompExprContext::CompExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void UpdateGrammarParser::CompExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompExpr(this);
}
void UpdateGrammarParser::CompExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompExpr(this);
}

std::any UpdateGrammarParser::CompExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitCompExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncCallExprContext ------------------------------------------------------------------

UpdateGrammarParser::FunctionCallContext* UpdateGrammarParser::FuncCallExprContext::functionCall() {
  return getRuleContext<UpdateGrammarParser::FunctionCallContext>(0);
}

UpdateGrammarParser::FuncCallExprContext::FuncCallExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void UpdateGrammarParser::FuncCallExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncCallExpr(this);
}
void UpdateGrammarParser::FuncCallExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<UpdateGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncCallExpr(this);
}

std::any UpdateGrammarParser::FuncCallExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UpdateGrammarVisitor*>(visitor))
    return parserVisitor->visitFuncCallExpr(this);
  else
    return visitor->visitChildren(this);
}

UpdateGrammarParser::ExpressionContext* UpdateGrammarParser::expression() {
   return expression(0);
}

UpdateGrammarParser::ExpressionContext* UpdateGrammarParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  UpdateGrammarParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  UpdateGrammarParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, UpdateGrammarParser::RuleExpression, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(61);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ParenthesisExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(51);
      match(UpdateGrammarParser::T__0);
      setState(52);
      expression(0);
      setState(53);
      match(UpdateGrammarParser::T__1);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<IdExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(55);
      match(UpdateGrammarParser::IDENTIFIER);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<NumExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(56);
      match(UpdateGrammarParser::NUMBER);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<DoubleExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(57);
      match(UpdateGrammarParser::DOUBLE_NUMBER);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<StringExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(58);
      match(UpdateGrammarParser::STRING_LITERAL);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<FuncCallExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(59);
      functionCall();
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<BoolExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(60);
      match(UpdateGrammarParser::BOOL);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(78);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(76);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<MulDivExprContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(63);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(64);
          antlrcpp::downCast<MulDivExprContext *>(_localctx)->op = _input->LT(1);
